fixed calendar z-index

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -25,4 +25,16 @@ tr:nth-child(even) {background-color: #dddddd;}
 
 .blackout {
   background-color: black;
+  border-color: black;
+}
+
+.fc-unthemed .fc-content, .fc-unthemed .fc-divider, .fc-unthemed .fc-list-heading td, .fc-unthemed .fc-list-view, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead {
+    color: white;
+}
+
+.fc-day-number, .fc-day-header {color: black !important;}
+
+.fc-view-container {
+    position: relative;
+    z-index: -1;
 }
